[package]
name = "rust-bitcoin-with-lamport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = "0.29.0"
sha2 = "0.10.8"
rand = "0.8.5"
hex = "0.4.3"
bitcoin = {version = "0.32.2", features = ["rand-std"]}
bitcoin_scripts = "0.10.0"